--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
 
         <div class="child">
-            <div class="olx-logo"><svg style="fill: #2C3A34;" height="30" width="60" viewBox="0 0 36.289 20.768"
+            <div class="olx-logo"><svg style="fill: #000f34;" height="30" width="60" viewBox="0 0 36.289 20.768"
                     alt="Logo" class="olx">
                     <path
                         d="M18.9 20.77V0h4.93v20.77zM0 10.39a8.56 8.56 0 1 1 8.56 8.56A8.56 8.56 0 0 1 0 10.4zm5.97-.01a2.6 2.6 0 1 0 2.6-2.6 2.6 2.6 0 0 0-2.6 2.6zm27 5.2l-1.88-1.87-1.87 1.88H25.9V12.3l1.9-1.9-1.9-1.89V5.18h3.27l1.92 1.92 1.93-1.92h3.27v3.33l-1.9 1.9 1.9 1.9v3.27z">
@@ -55,7 +55,7 @@
 
         <div class="Second-section">
          <div class="Location-search">
-                <div><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 1024 1024"
+                <div><svg xmlns="http://www.w3.org/2000/svg" style="fill: blue;" width="24" height="24"   viewBox="0 0 1024 1024"
                         class="_11b2c2ae _8033f60b" fill="#000234">
                         <path
                             d="M512 85.33c211.75 0 384 172.27 384 384 0 200.58-214.8 392.34-312.66 469.34H440.68C342.83 861.67 128 669.9 128 469.33c0-211.73 172.27-384 384-384zm0 85.34c-164.67 0-298.67 133.97-298.67 298.66 0 160.02 196.89 340.53 298.46 416.6 74.81-56.72 298.88-241.32 298.88-416.6 0-164.69-133.98-298.66-298.67-298.66zm0 127.99c94.1 0 170.67 76.56 170.67 170.67s-76.56 170.66-170.66 170.66-170.67-76.56-170.67-170.66S417.9 298.66 512 298.66zm0 85.33c-47.06 0-85.33 38.28-85.33 85.34s38.27 85.33 85.34 85.33 85.33-38.27 85.33-85.33-38.27-85.34-85.33-85.34z">
